; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_alloc.c_ocfs2_xattr_tree_fill_root_el.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_alloc.c_ocfs2_xattr_tree_fill_root_el.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_extent_tree = type { i32*, %struct.ocfs2_xattr_block* }
%struct.ocfs2_xattr_block = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocfs2_extent_tree*)* @ocfs2_xattr_tree_fill_root_el to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ocfs2_xattr_tree_fill_root_el(%struct.ocfs2_extent_tree* %0) #0 {
  %2 = alloca %struct.ocfs2_extent_tree*, align 8
  %3 = alloca %struct.ocfs2_xattr_block*, align 8
  store %struct.ocfs2_extent_tree* %0, %struct.ocfs2_extent_tree** %2, align 8
  %4 = load %struct.ocfs2_extent_tree*, %struct.ocfs2_extent_tree** %2, align 8
  %5 = getelementptr inbounds %struct.ocfs2_extent_tree, %struct.ocfs2_extent_tree* %4, i32 0, i32 1
  %6 = load %struct.ocfs2_xattr_block*, %struct.ocfs2_xattr_block** %5, align 8
  store %struct.ocfs2_xattr_block* %6, %struct.ocfs2_xattr_block** %3, align 8
  %7 = load %struct.ocfs2_xattr_block*, %struct.ocfs2_xattr_block** %3, align 8
  %8 = getelementptr inbounds %struct.ocfs2_xattr_block, %struct.ocfs2_xattr_block* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.ocfs2_extent_tree*, %struct.ocfs2_extent_tree** %2, align 8
  %12 = getelementptr inbounds %struct.ocfs2_extent_tree, %struct.ocfs2_extent_tree* %11, i32 0, i32 0
  store i32* %10, i32** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
